redi server kullanıcı girişi online yapıldı

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ GOOGLE_LOGIN_CLIENT_ID = 227281585805-kufo2qoberhgj53cdn69ch92rl3fskv6.apps.goog
 GOOGLE_LOGIN_SECRET_ID = YawXdVNA1t2CpAAlo-H9Nw3a
 GOOGLE_LOGIN_CALLBACK_URL = /auth/google/callback
 SESSION_SECRET_KEY = asdf
+
+REDIS_URI = 127.0.0.1
+REDIS_PORT = 6379
+REDIS_PASS = 15541039
