--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "connect-redis": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-load": "^1.1.16",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "mongoose": "^5.13.9",
-    "mongoose-find-or-create": "^1.3.1",
-    "mongose": "0.0.2-security",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "pug": "2.0.0-beta11"
+    "passport.socketio": "^3.7.0",
+    "pug": "2.0.0-beta11",
+    "redis": "^3.1.2",
+    "shortid": "^2.2.16",
+    "socket.io": "^4.2.0",
+    "socket.io-redis": "^6.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
