--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-load": "^1.1.16",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
     "mongoose": "^5.13.9",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
